--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "KundeApp",
+  "name": "kundeapp",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Marc Eley - Aarstiderne",
+  "homepage": "https://www.aarstiderne.com/",
   "private": true,
   "scripts": {
     "start": "ionic-app-scripts serve",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/file": "^4.17.0",
     "@ionic-native/http": "^4.17.0",
     "@ionic-native/native-storage": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -38,6 +39,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-image-loader": "^6.3.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -47,7 +49,7 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project",
+  "description": "Aarstidernes KundeApp",
   "cordova": {
     "plugins": {
       "cordova-plugin-advanced-http": {},
@@ -57,7 +59,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "ios"
