--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
-    "cordova-plugin-advanced-http": "~2.0.1",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-advanced-http": "^2.0.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.3",
+    "cordova-plugin-ionic-webview": "^2.2.5",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
