--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^6.3.2",
     "ionicons": "3.0.0",
+    "ng-lazyload-image": "^5.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
