--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/file": "^4.17.0",
+    "@ionic-native/globalization": "^4.18.0",
     "@ionic-native/http": "^4.17.0",
     "@ionic-native/native-storage": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -63,7 +64,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-nativestorage": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-globalization": {}
     },
     "platforms": [
       "ios"
