--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
-    "@ionic-native/file": "^4.17.0",
+    "@ionic-native/file": "^4.18.0",
     "@ionic-native/globalization": "^4.18.0",
-    "@ionic-native/http": "^4.17.0",
-    "@ionic-native/native-storage": "^4.17.0",
+    "@ionic-native/http": "^4.18.0",
+    "@ionic-native/native-storage": "^4.18.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
@@ -32,11 +32,12 @@
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "cordova-ios": "^4.5.5",
-    "cordova-plugin-advanced-http": "^2.0.1",
+    "cordova-plugin-advanced-http": "^2.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.5",
+    "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -50,7 +51,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
+    "@ionic/app-scripts": "^3.2.1",
     "typescript": "~2.6.2"
   },
   "description": "Aarstidernes KundeApp",
