--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/core": "^4.18.0",
     "@ionic-native/file": "^4.18.0",
+    "@ionic-native/firebase": "^4.18.0",
+    "@ionic-native/firebase-messaging": "^4.18.0",
     "@ionic-native/globalization": "^4.18.0",
     "@ionic-native/http": "^4.18.0",
     "@ionic-native/native-storage": "^4.18.0",
-    "@ionic-native/splash-screen": "~4.15.0",
-    "@ionic-native/status-bar": "~4.15.0",
+    "@ionic-native/splash-screen": "^4.18.0",
+    "@ionic-native/status-bar": "^4.18.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^9.1.1",
@@ -35,18 +38,20 @@
     "cordova-plugin-advanced-http": "^2.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-ionic-webview": "3.0.0",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "firebase": "^5.7.2",
     "ionic-angular": "3.9.2",
     "ionic-image-loader": "^6.3.2",
     "ionicons": "3.0.0",
-    "ng-lazyload-image": "^5.0.0",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -62,11 +67,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-globalization": {}
+      "cordova-plugin-globalization": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "ios"
