--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.19.0",
     "@ionic-native/core": "^4.18.0",
     "@ionic-native/file": "^4.18.0",
+    "@ionic-native/file-transfer": "^4.19.0",
     "@ionic-native/firebase": "^4.19.0",
     "@ionic-native/firebase-messaging": "^4.18.0",
     "@ionic-native/globalization": "^4.18.0",
@@ -72,7 +74,9 @@
       "cordova-plugin-file": {},
       "cordova-plugin-globalization": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "ios"
