--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.19.0",
+    "@ionic-native/cloud-settings": "^4.20.0",
     "@ionic-native/core": "^4.18.0",
     "@ionic-native/file": "^4.18.0",
     "@ionic-native/file-transfer": "^4.19.0",
@@ -36,10 +37,13 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "cordova-android": "~7.1.4",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-advanced-http": "^2.0.2",
+    "cordova-plugin-camera": "~4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "~1.7.1",
     "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -55,10 +59,7 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "cordova-plugin-camera": "~4.0.3",
-    "cordova-plugin-file-transfer": "~1.7.1",
-    "cordova-android": "~7.1.4"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.1",
